# application-test

./: README.md  main.py  pyproject.toml
safe_directory/: test.txt
