[tool.poetry]
name = "application-test"
version = "0.1.0"
description = ""
authors = ["Atanas <atanas.viyachki@wealthsimple.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.3"
uvicorn = "^0.32.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
